<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.ResponseActivity">

        <TextView
            android:id="@+id/response_body_label_txt"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/request_body_label"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/error_message_value" />

        <TextView
            android:id="@+id/response_body"
            style="@style/TextAppearance.MaterialComponents.Body2"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_large"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/response_body_label_txt" />

        <TextView
            android:id="@+id/response_code_label_txt"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/response_code_label"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/response_code_value"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/error_message_label_txt"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/error_message_label"
            android:textColor="#FF0000"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/error_message_value"
            app:layout_constraintTop_toBottomOf="@+id/response_code_value" />

        <TextView
            android:id="@+id/error_message_value"
            style="@style/TextAppearance.MaterialComponents.Body2"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_large"
            android:textColor="#FF0000"
            app:layout_constraintBottom_toBottomOf="@+id/error_message_label_txt"
            app:layout_constraintLeft_toRightOf="@+id/error_message_label_txt"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/error_message_label_txt" />

        <TextView
            android:id="@+id/response_headers_label_txt"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/request_headers_label"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/response_body" />

        <TextView
            android:id="@+id/response_code_value"
            style="@style/TextAppearance.MaterialComponents.Body2"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_large"
            app:layout_constraintBottom_toBottomOf="@+id/response_code_label_txt"
            app:layout_constraintLeft_toRightOf="@+id/response_code_label_txt"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/response_code_label_txt" />

        <TextView
            android:id="@+id/response_headers_value"
            style="@style/TextAppearance.MaterialComponents.Body2"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_large"
            android:layout_marginBottom="@dimen/margin_medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/response_headers_label_txt" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

